Modified Graphs, touched up CSS
Simplified CSS some (reset issue)

Put Graph into a div that will automatically add a scroll bar so it can grow as far to the side as we'd like. In the future may want to add a autoscroll option for that div, so that we can keep moving to the right as it goes.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	font-family: WorkAroundWebKitAndMozilla, monospace;
 }
 p {
-	margin: 10px;
+  margin-bottom:0.5em;
 }
 td.cell {
 	width: 25px;
@@ -26,4 +26,10 @@ label input {
 }
 legend {
   font-size:120%;
+}
+.hor{
+width:100%;
+height:320px;
+overflow:auto;
+white-space: nowrap;
 }
